--- a/projects/extensions/datetimepicker/datetimepicker-content.scss
+++ b/projects/extensions/datetimepicker/datetimepicker-content.scss
@@ -2,10 +2,10 @@ $calendar-padding: 8px;
 $non-touch-calendar-cell-size: 40px;
 $non-touch-calendar-portrait-width: $non-touch-calendar-cell-size * 7 + $calendar-padding * 2;
 $non-touch-calendar-portrait-height: 424px;
-$non-touch-calendar-landscape-width: 446px;
+$non-touch-calendar-landscape-width: 432px;
 $non-touch-calendar-landscape-height: 328px;
 $non-touch-calendar-with-time-input-portrait-height: 490px;
-$non-touch-calendar-with-time-input-landscape-height: 412px;
+$non-touch-calendar-with-time-input-landscape-height: 404px;
 
 // Ideally the calendar would have a constant aspect ratio, no matter its size, and we would base
 // these measurements off the aspect ratio. Unfortunately, the aspect ratio does change a little as
